# corrode

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  clippy.toml  install.sh  targets.txt.example  vuln.md
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.project/: changelog.md  todo.md
docs/diagrams/: architecture.mmd  workflow.mmd
examples/: corrode.toml
src/: api_discovery.rs  api_testing.rs  cli.rs  config.rs  lib.rs  main.rs  network_monitor.rs  types.rs
src/api/: discovery.rs  mod.rs  testing.rs
src/detectors/: ast.rs  confidence.rs  cve.rs  dom.rs  javascript.rs  jwt.rs  mod.rs  scoring.rs  secrets.rs  security.rs  session.rs
src/detectors/collectors/: ast.rs  javascript.rs  mod.rs
src/detectors/manifests/: mod.rs  nextjs.rs  others.rs  remix.rs  routes.rs
src/detectors/patterns/: ai.rs  auth.rs  cloud.rs  collaboration.rs  communication.rs  infrastructure.rs  mod.rs  monitoring.rs  payment.rs  vcs.rs
src/detectors/secrets/: mod.rs
src/detectors/secrets/patterns/: cloud.rs  database.rs  mod.rs  monitoring.rs
src/detectors/security/: mod.rs
src/detectors/sourcemaps/: intel.rs  mod.rs  parse.rs  retrieve.rs
src/detectors/taint/: csp.rs  gadgets.rs  mod.rs  parse.rs  postmessage.rs  proto.rs  sinks.rs  sources.rs  visitor.rs
src/detectors/technologies/: headers.rs  meta.rs  mod.rs  runtime.rs  scripts.rs  wordpress.rs
src/detectors/vulnerabilities/: mod.rs  nextjs.rs  react.rs  rsc.rs  wordpress.rs
src/network/: monitor.rs
src/reporting/: json.rs  markdown.rs
src/reporting/markdown/: appendix.rs  assessment.rs  findings.rs  inventory.rs  leads.rs  mod.rs  network.rs  security.rs  sourcemaps.rs  summary.rs  taint.rs  technologies.rs
src/scanner/: chrome.rs  mod.rs  page_utils.rs  workflow.rs
