[package]
name = "corrode"
version = "0.1.0"
edition = "2021"
authors = ["Security Research"]
description = "High-performance security scanner for finding exposed credentials and secrets"
license = "MIT"

[dependencies]
chromiumoxide = "0.6.0"
chromiumoxide_stealth = { git = "https://github.com/cloei/chromiumoxide_stealth" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
url = "2.5"
colored = "2.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
lazy_static = "1.4"
base64 = "0.22"
