[package]
name = "corrode-scanner"
version = "0.1.0"
edition = "2021"
authors = ["ul0gic"]
description = "Passive web reconnaissance tool for extracting secrets, credentials, and security data"
license = "AGPL-3.0-only"
repository = "https://github.com/ul0gic/corrode"
homepage = "https://github.com/ul0gic/corrode"
documentation = "https://docs.rs/corrode"
readme = "README.md"
keywords = ["security", "scanner", "cli", "pentest", "web"]
categories = [
    "command-line-utilities",
    "development-tools::testing",
    "web-programming"
]

[dependencies]
chromiumoxide = "0.6.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
url = "2.5"
colored = "2.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
lazy_static = "1.4"
base64 = "0.22"
swc_common = "17.0.1"
swc_ecma_ast = "18.0.0"
swc_ecma_parser = { version = "27.0.6", features = ["typescript"] }
swc_ecma_visit = "18.0.1"
