[package]
name = "corrode-scanner"
version = "0.1.0"
edition = "2021"
authors = ["ul0gic"]
description = "Passive web reconnaissance tool for extracting secrets, credentials, and security data"
license = "AGPL-3.0-only"
repository = "https://github.com/ul0gic/corrode"
homepage = "https://github.com/ul0gic/corrode"
documentation = "https://docs.rs/corrode"
readme = "README.md"
keywords = ["security", "scanner", "cli", "pentest", "web"]
categories = [
    "command-line-utilities",
    "development-tools::testing",
    "web-programming"
]

[dependencies]
chromiumoxide = "0.6.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
url = "2.5"
colored = "2.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
lazy_static = "1.4"
base64 = "0.22"
swc_common = "19.0.0"
swc_ecma_ast = "18.0.0"
swc_ecma_parser = { version = "27.0.6", features = ["typescript"] }
swc_ecma_visit = "18.0.1"
toml = "0.8"
dirs = "5"

[lints.clippy]
# === DENY (hard errors) ===
# Security-critical: no panics in production
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# No indexing (use .get() to avoid panics)
indexing_slicing = "deny"

# === WARN (pedantic quality) ===
pedantic = { level = "warn", priority = -1 }
# Selective pedantic overrides (allow these specific pedantic lints)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_field_names = "allow"

# === Additional strictness ===
# Clone discipline
clone_on_ref_ptr = "warn"
# String discipline
str_to_string = "warn"
# Error handling
result_large_err = "warn"
# Redundancy
redundant_closure_for_method_calls = "warn"
# Correctness
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"

[lints.rust]
# Deny unsafe across the entire crate
unsafe_code = "deny"
